* i2psnark:       - Limit number of parallel requests of a single piece when in the end game       - Shorten and weight the speed tracker so the display is more         reflective of current speed
Monotone-Parent: 2a32b0ce156f4dbe7e7ae58f6cbbe5649fa89bdb
Monotone-Revision: b0bbf11fed6168da5ecbcb5fc389033fb283a3b7

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2010-11-01T14:35:01
Monotone-Branch: i2p.i2p

--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,15 @@
+2010-11-01 zzz
+    * ClientConnectionRunner: Add synch to fix race causing AIOOBE
+                              (http://forum.i2p/viewtopic.php?t=5061)
+    * configlogging.jsp: Parse log limit with current locale
+                (ticket #118)
+    * i2psnark:
+      - Limit number of parallel requests of a single piece when in the end game
+      - Shorten and weight the speed tracker so the display is more
+        reflective of current speed
+    * logs.jsp: Add message if wrapper log not found
+                (ticket #103)
+
 2010-10-30 zzz
     * i2psnark:
       - Priority mapping bugfix
