--- a/apps/susidns/locale/messages_de.po
+++ b/apps/susidns/locale/messages_de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: I2P susidns\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-06-13 19:24+0000\n"
-"PO-Revision-Date: 2010-06-15 11:22+0100\n"
+"PO-Revision-Date: 2010-11-05 11:27+0100\n"
 "Last-Translator: echelon <echelon@i2pmail.org>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
@@ -25,7 +25,7 @@ msgstr "Suche"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:203
 msgid "Search within filtered list"
-msgstr "Suche in gefilterte Liste"
+msgstr "Suche in gefilterter Liste"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:205
 msgid "Filtered list"
@@ -76,7 +76,7 @@ msgstr "Hostname {0} ist bereits im Adressbuch, nicht geändert."
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:265
 #, java-format
 msgid "Host name {0} is already in addressbook with a different destination. Click \"Replace\" to overwrite."
-msgstr "Hostname {0} ist bereits im Adressbuch mit einem anderen Ziel. Klicken Sie auf \"Ersetzen\" um den alten Eintrag zu ersetzen."
+msgstr "Hostname {0} ist mit einem anderen Ziel bereits im Adressbuch. Klicken Sie auf \"Ersetzen\", um den alten Eintrag zu ersetzen!"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:277
 #, java-format
@@ -94,7 +94,7 @@ msgstr "Ungültiges Basis-64 Ziel"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:288
 msgid "Please enter a host name and destination"
-msgstr "Bitte geben Sie einen Hostnamen und ein Ziel ein"
+msgstr "Bitte geben Sie einen Hostnamen und ein Ziel ein!"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:292
 #: ../src/tmp/i2p/susi/dns/jsp/addressbook_jsp.java:314
@@ -104,16 +104,16 @@ msgstr "Ausgewähltes löschen"
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:302
 #, java-format
 msgid "Destination {0} deleted."
-msgstr "Ziel {0} gelöscht."
+msgstr "Ziel {0} gelöscht"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:304
 #, java-format
 msgid "{0} destinations deleted."
-msgstr "{0} Ziele gelöscht."
+msgstr "{0} Ziele gelöscht"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:310
 msgid "Addressbook saved."
-msgstr "Adressbuch gespeichert."
+msgstr "Adressbuch gespeichert"
 
 #: ../src/java/src/i2p/susi/dns/AddressbookBean.java:313
 msgid "ERROR: Could not write addressbook file."
@@ -123,7 +123,7 @@ msgstr "FEHLER: Konnte Adressbuchdatei nicht schreiben."
 #: ../src/java/src/i2p/susi/dns/ConfigBean.java:148
 #: ../src/java/src/i2p/susi/dns/SubscriptionsBean.java:150
 msgid "Invalid form submission, probably because you used the \"back\" or \"reload\" button on your browser. Please resubmit."
-msgstr "Ungültige Datenübertragung, vielleicht haben Sie die \"Zurück\" oder \"Neu laden\" Schalter in ihrem Browser genutzt. Bitte neu senden."
+msgstr "Ungültige Datenübertragung, vielleicht haben Sie die \"Zurück\"- oder \"Neu laden\"-Schalter in Ihrem Browser genutzt. Bitte neu senden!"
 
 #: ../src/java/src/i2p/susi/dns/ConfigBean.java:139
 #: ../src/java/src/i2p/susi/dns/SubscriptionsBean.java:129
@@ -134,7 +134,7 @@ msgstr "Speichern"
 
 #: ../src/java/src/i2p/susi/dns/ConfigBean.java:141
 msgid "Configuration saved."
-msgstr "Einstellungen gespeichert."
+msgstr "Einstellungen gespeichert"
 
 #: ../src/java/src/i2p/susi/dns/ConfigBean.java:142
 #: ../src/java/src/i2p/susi/dns/SubscriptionsBean.java:144
@@ -145,7 +145,7 @@ msgstr "Neu laden"
 
 #: ../src/java/src/i2p/susi/dns/ConfigBean.java:144
 msgid "Configuration reloaded."
-msgstr "Einstellungen neu geladen."
+msgstr "Einstellungen neu geladen"
 
 #. Yes this is a hack.
 #. No it doesn't work on a text-mode browser.
@@ -154,15 +154,15 @@ msgstr "Einstellungen neu geladen."
 #. config reload and fetch.
 #: ../src/java/src/i2p/susi/dns/SubscriptionsBean.java:138
 msgid "Subscriptions saved, updating addressbook from subscription sources now."
-msgstr "Abonnement gespeichert, aktualisiere jetzt das Adressbuch von unten stehenden Aboquellen."
+msgstr "Abonnement gespeichert, aktualisiere jetzt das Adressbuch von untenstehenden Aboquellen."
 
 #: ../src/java/src/i2p/susi/dns/SubscriptionsBean.java:142
 msgid "Subscriptions saved."
-msgstr "Abonnementquellen gespeichert."
+msgstr "Abonnementquellen gespeichert"
 
 #: ../src/java/src/i2p/susi/dns/SubscriptionsBean.java:146
 msgid "Subscriptions reloaded."
-msgstr "Abonnementquellen neu geladen."
+msgstr "Abonnementquellen neu geladen"
 
 #: ../src/tmp/i2p/susi/dns/jsp/addressbook_jsp.java:125
 #: ../src/tmp/i2p/susi/dns/jsp/addressbook_jsp.java:145
@@ -254,7 +254,7 @@ msgstr "Ziel"
 
 #: ../src/tmp/i2p/susi/dns/jsp/addressbook_jsp.java:257
 msgid "Mark for deletion"
-msgstr "zum löschen markieren"
+msgstr "zum Löschen markieren"
 
 #: ../src/tmp/i2p/susi/dns/jsp/addressbook_jsp.java:279
 msgid "address helper link"
@@ -286,19 +286,19 @@ msgstr "Dateien und Verzeichnispfade sind relativ zum Arbeitsverzeichnis des Adr
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:136
 msgid "If you want to manually add lines to an addressbook, add them to the private or master addressbooks."
-msgstr "Falls Sie manuell Einträge zum Adressbuch hinzufügen möchten, fügen Sie diese zum Privaten oder zum Master Adressbuch hinzu."
+msgstr "Falls Sie manuell Einträge zum Adressbuch hinzufügen möchten, fügen Sie diese zum privaten oder zum Master-Adressbuch hinzu!"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:138
 msgid "The router addressbook and the published addressbook are updated by the addressbook application."
-msgstr "Das Router Adressbuch und das veröffentlichte Adressbuch werden von der Adressbuch Anwendung aktualisiert."
+msgstr "Das Router-Adressbuch und das veröffentlichte Adressbuch werden von der Adressbuch-Anwendung aktualisiert."
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:140
 msgid "When you publish your addressbook, ALL destinations from the master and router addressbooks appear there."
-msgstr "Falls Sie das Adressbuch veröffentlichen erscheinen dort ALLE Ziele aus dem Master und dem Router Adressbuch."
+msgstr "Falls Sie das Adressbuch veröffentlichen, erscheinen dort ALLE Ziele aus dem Master- und dem Router-Adressbuch."
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:142
 msgid "Use the private addressbook for private destinations, these are not published."
-msgstr "Benutzen Sie das private Adressbuch für private Ziele, diese werden nicht veröffentlicht."
+msgstr "Benutzen Sie das private Adressbuch für private Ziele. Diese werden nicht veröffentlicht."
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:144
 msgid "Options"
@@ -306,15 +306,15 @@ msgstr "Optionen"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:146
 msgid "File containing the list of subscriptions URLs (no need to change)"
-msgstr "Datei mit der Liste von Abonnement-URLs (braucht nicht geändert werden)"
+msgstr "Datei mit der Liste von Abonnement-URLs (braucht nicht geändert zu werden)"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:148
 msgid "Update interval in hours"
-msgstr "Update Intervall in Stunden"
+msgstr "Aktualisierungsintervall in Stunden"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:150
 msgid "Your public hosts.txt file (choose a path within your webserver document root)"
-msgstr "Ihre öffentliche hosts.txt datei (Wählen Sie einen Pfad in ihrem Webserver Wurzelverzeichnis)"
+msgstr "Ihre öffentliche hosts.txt-Datei (Wählen Sie einen Pfad in Ihrem Webserver Wurzelverzeichnis!)"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:152
 msgid "Your hosts.txt (don't change)"
@@ -322,27 +322,27 @@ msgstr "Ihre hosts.txt (nicht ändern)"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:154
 msgid "Your personal addressbook, these hosts will be published"
-msgstr "Ihr persönliches Adressbuch, diese Hosteinträge werden veröffentlicht"
+msgstr "Ihr persönliches Adressbuch - diese Hosteinträge werden veröffentlicht"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:156
 msgid "Your private addressbook, it is never published"
-msgstr "Ihr privates Adressbuch, dieses wird nie veröffentlicht"
+msgstr "Ihr privates Adressbuch - dieses wird nie veröffentlicht"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:158
 msgid "Port for your eepProxy (no need to change)"
-msgstr "Port zu Ihrem EepProxy (braucht nicht geändert werden)"
+msgstr "Port zu Ihrem EepProxy (braucht nicht geändert zu werden)"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:160
 msgid "Hostname for your eepProxy (no need to change)"
-msgstr "Hostname zu Ihrem EepProxy (braucht nicht geändert werden)"
+msgstr "Hostname zu Ihrem EepProxy (braucht nicht geändert zu werden)"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:162
 msgid "Whether to update the published addressbook"
-msgstr "Ob ihr veröffentlichtes Adressbuch aktualisiert werden soll"
+msgstr "Ob Ihr veröffentlichtes Adressbuch aktualisiert werden soll"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:164
 msgid "File containing the etags header from the fetched subscription URLs (no need to change)"
-msgstr "Datei,die die etags-Kopfzeilen der bereits aktualisierten Abonnement URLs enthält (braucht nicht geändert werden)"
+msgstr "Datei, die die etags-Kopfzeilen der bereits aktualisierten Abonnement-URLs enthält (braucht nicht geändert zu werden)"
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:166
 msgid "File containing the modification timestamp for each fetched subscription URL (no need to change)"
@@ -350,11 +350,11 @@ msgstr "Datei, welche die Zeitstempel der letzten Modifikation für jede bereits
 
 #: ../src/tmp/i2p/susi/dns/jsp/config_jsp.java:168
 msgid "File to log activity to (change to /dev/null if you like)"
-msgstr "Berichte zu Aktivitäten werden in dieser Datei gespeichert (ändern Sie es zu /dev/null falls Sie möchten)"
+msgstr "Berichte zu Aktivitäten werden in dieser Datei gespeichert (ändern Sie es zu /dev/null, wenn Sie möchten)"
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:91
 msgid "Introduction"
-msgstr "Einleittng - SusiDNS"
+msgstr "Einleitung - SusiDNS"
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:109
 msgid "What is the addressbook?"
@@ -362,11 +362,11 @@ msgstr "Was ist das Adressbuch?"
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:111
 msgid "The addressbook application is part of your i2p installation."
-msgstr "Das Adressbuch ist ein Teil Ihrer I2P Installation."
+msgstr "Das Adressbuch ist ein Teil Ihrer I2P-Installation."
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:113
 msgid "It regularly updates your hosts.txt file from distributed sources or \"subscriptions\"."
-msgstr "Es aktualisiert regelmässig Ihre hosts.txt Datei aus verteilten Quellen oder den \"Abonnementquellen\"."
+msgstr "Es aktualisiert regelmäßig Ihre hosts.txt-Datei aus verteilten Quellen oder den \"Abonnementquellen\"."
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:115
 msgid "In the default configuration, the addressbook is only subscribed to www.i2p2.i2p."
@@ -374,7 +374,7 @@ msgstr "In der Standardeinstellung bezieht das Adressbuch sein Abonnement nur vo
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:117
 msgid "Subscribing to additional sites is easy, just add them to your <a href=\"subscriptions.jsp\">subscriptions</a> file."
-msgstr "Zusätzliche Abonnementquellen hinzufügen ist einfach, fügen Sie deren URL zu Ihrer <a href=\"subscriptions.jsp\">Abonnement</a> Datei hinzu."
+msgstr "Zusätzliche Abonnementquellen hinzuzufügen ist einfach: Fügen Sie dazu deren URL zu Ihrer <a href=\"subscriptions.jsp\">Abonnement</a>-Datei hinzu."
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:119
 msgid "For more information on naming in i2p, see <a href=\"http://www.i2p2.i2p/naming.html\">the overview on www.i2p2.i2p</a>."
@@ -386,15 +386,15 @@ msgstr "Wie funktioniert das Adressbuch?"
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:123
 msgid "The addressbook application regularly polls your subscriptions and merges their content into your \"router\" addressbook, stored in the hosts.txt file."
-msgstr "Die Adressbuch-Anwendung bezieht regelmässig ihre Abonnements und fügt deren Inhalt in Ihr \"Router\" Adressbuch zusammen, gespeichert in der hosts.txt Datei."
+msgstr "Die Adressbuch-Anwendung bezieht regelmäßig ihre Abonnements und fügt deren Inhalt mit Ihrem \"Router\"-Adressbuch zusammen, welches in der hosts.txt-Datei gespeichert ist."
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:125
 msgid "Then it merges your \"master\" addressbook (userhosts.txt) into the router addressbook as well."
-msgstr "Dann fügt diese auch Ihr \"Master\" Adressbuch (userhosts.txt) dem Router Adressbuch hinzu."
+msgstr "Dann fügt diese auch Ihr \"Master\"-Adressbuch (userhosts.txt) dem Router-Adressbuch hinzu."
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:127
 msgid "If configured, the router addressbook is now written to the \"published\" addressbook, which will be publicly available if you are running an eepsite."
-msgstr "Falls eingestellt wird das Router Adressbuch jetzt in das \"veröffentlichte\" Adressbuch kopiert, dieses ist öffentlich erreichbar sobald Sie eine Eepseite aktiv haben."
+msgstr "Falls eingestellt, wird das Router-Adressbuch jetzt in das \"veröffentlichte\" Adressbuch kopiert, dieses ist öffentlich erreichbar sobald Sie eine Eepseite aktiv haben."
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:129
 msgid "The router also uses a private addressbook (privatehosts.txt, not shown in the picture), which is not merged or published."
@@ -406,27 +406,27 @@ msgstr "Hosts in Ihrem privatem Adressbuch können von Ihnen aufgerufen werden, 
 
 #: ../src/tmp/i2p/susi/dns/jsp/index_jsp.java:133
 msgid "The private addressbook can also be used for aliases of hosts in your other addressbooks."
-msgstr "Das private Adressbuch kann auch für Verweise auf Hosts in ihren anderen Adressbüchern genutzt werden."
+msgstr "Das private Adressbuch kann auch für Verweise auf Hosts in Ihren anderen Adressbüchern genutzt werden."
 
 #: ../src/tmp/i2p/susi/dns/jsp/subscriptions_jsp.java:132
 msgid "The subscription file contains a list of i2p URLs."
-msgstr "Die Abonnementdatei enthält eine Liste von I2P URLs."
+msgstr "Die Abonnementdatei enthält eine Liste von I2P-URLs."
 
 #: ../src/tmp/i2p/susi/dns/jsp/subscriptions_jsp.java:134
 msgid "The addressbook application regularly checks this list for new eepsites."
-msgstr "Die Adressbuchanwendung prüft diese Liste regelmässig auf neue Eepsites."
+msgstr "Die Adressbuchanwendung prüft diese Liste regelmäßig auf neue Eepsites."
 
 #: ../src/tmp/i2p/susi/dns/jsp/subscriptions_jsp.java:136
 msgid "Those URLs refer to published hosts.txt files."
-msgstr "Diese URLs verweisen auf veröffentlichte hosts.txt Dateien."
+msgstr "Diese URLs verweisen auf veröffentlichte hosts.txt-Dateien."
 
 #: ../src/tmp/i2p/susi/dns/jsp/subscriptions_jsp.java:138
 msgid "The default subscription is the hosts.txt from www.i2p2.i2p, which is updated infrequently."
-msgstr "Das standard Abonnement ist die hosts.txt Datei von www.i2p2.i2p, welche nicht regelmässig aktualisiert wird."
+msgstr "Das standardabonnement ist die hosts.txt-Datei von www.i2p2.i2p, welche nicht regelmäßig aktualisiert wird."
 
 #: ../src/tmp/i2p/susi/dns/jsp/subscriptions_jsp.java:140
 msgid "So it is a good idea to add additional subscriptions to sites that have the latest addresses."
-msgstr "Somit ist es eine gute Idee weitere Abonnement von Seiten mit den neuesten Adressen hinzuzufügen."
+msgstr "Somit ist es eine gute Idee, weitere Abonnements von Seiten mit den neuesten Adressen hinzuzufügen."
 
 #: ../src/tmp/i2p/susi/dns/jsp/subscriptions_jsp.java:142
 msgid "See the FAQ for a list of subscription URLs."
