--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,9 @@
+2010-11-06 HungryHobo
+    * New Ant target: debianrepo
+    * Rename debian target to debian-binary
+    * New debian target generates binary and source packages
+    * Debian tweaks
+
 2010-11-03 zzz
     * Merge and snark fixups
 
