--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-11-08 zzz
+    * I2CP: Fix NPE caused by null session options (seen in i2pbote)
+
 2010-11-06 HungryHobo
     * New Ant target: debianrepo
     * Rename debian target to debian-binary
