--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+i2p (0.8.0-1) all; urgency=low
+  * I2P 0.8
+  * Debian packaging improvements
+ -- HungryHobo@i2pmail.org <HungryHobo@mail.i2p>  Mon, 08 Nov 2010 17:14:57 +0000
+
 i2p (0.7.10-0) testing; urgency=low
   * tweaks
     um...
