--- a/apps/routerconsole/locale/messages_de.po
+++ b/apps/routerconsole/locale/messages_de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: I2P routerconsole\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-10 08:24+0000\n"
-"PO-Revision-Date: 2010-11-12 02:26+0100\n"
+"PO-Revision-Date: 2010-11-13 00:45+0100\n"
 "Last-Translator: mixxy <m1xxy@mail.i2p>\n"
 "Language-Team: echelon <echelon@mail.i2p>, Sperreingang <sperrbezirk@mail.i2p>\n"
 "MIME-Version: 1.0\n"
@@ -3284,11 +3284,11 @@ msgstr "Bandbreite ein-/ausgehend"
 
 #: ../java/src/net/i2p/router/web/SummaryBarRenderer.java:359
 msgid "Total"
-msgstr "Gesamt"
+msgstr "gesamt"
 
 #: ../java/src/net/i2p/router/web/SummaryBarRenderer.java:366
 msgid "Used"
-msgstr "Genutzt"
+msgstr "genutzt"
 
 #: ../java/src/net/i2p/router/web/SummaryBarRenderer.java:381
 msgid "Exploratory"
