--- a/apps/i2psnark/locale/messages_fr.po
+++ b/apps/i2psnark/locale/messages_fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: I2P i2psnark\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-13 08:01+0000\n"
-"PO-Revision-Date: 2010-11-13 10:54+0100\n"
+"PO-Revision-Date: 2010-11-13 11:51+0100\n"
 "Last-Translator: mixxy <m1xxy@mail.i2p>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
@@ -574,7 +574,7 @@ msgstr "Aucun intérêt (le pair n'a aucun morceau utile)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:945
 msgid "Choked (The peer is not allowing us to request pieces)"
-msgstr "Choked (le pair ne nous permet pas de demander un morceau)"
+msgstr "Bridé (le pair ne nous permet pas de demander un morceau)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:959
 msgid "Uninterested (We have no pieces the peer needs)"
@@ -582,7 +582,7 @@ msgstr "Aucun intérêt (nous n'avons aucun morceau utile au pair)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:961
 msgid "Choking (We are not allowing the peer to request pieces)"
-msgstr "Choking (nous ne permettons pas au pair de demander un morceau)"
+msgstr "Bridage (nous ne permettons pas au pair de demander un morceau)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:1005
 msgid "Add Torrent"
