a missing comma in i2psnark, prolly others still missing
Monotone-Parent: 22b5b130b927c3804522e5aeb19ce5c8caa02090
Monotone-Revision: ddc9be27c47878e472d5b6c281cccb6094c42c9a

Monotone-Author: m1xxy@mail.i2p
Monotone-Date: 2010-11-17T00:03:38
Monotone-Branch: i2p.i2p

--- a/apps/i2psnark/locale/messages_de.po
+++ b/apps/i2psnark/locale/messages_de.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: I2P i2psnark\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-13 00:19+0000\n"
-"PO-Revision-Date: 2010-11-16 18:44+0100\n"
+"PO-Revision-Date: 2010-11-17 01:02+0100\n"
 "Last-Translator: mixxy <m1xxy@mail.i2p>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
@@ -570,7 +570,7 @@ msgstr "Quelle"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:943
 msgid "Uninteresting (The peer has no pieces we need)"
-msgstr "Uninteressant (Der Teilnehmer hat keine Teile die wir benötigen)"
+msgstr "Uninteressant (Der Teilnehmer hat keine Teile, die wir benötigen)"
 
 #: ../java/src/org/klomp/snark/web/I2PSnarkServlet.java:945
 msgid "Choked (The peer is not allowing us to request pieces)"
